[package]
name = "blambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.14"
lazy_static = "1.4.0"
num-bigint = "0.4.4"
pest = "2.7.6"
pest_derive = "2.7.6"
pest_meta = "2.7.6"
serde = { version = "1.0.195", features = ["rc"] }
serde_derive = "1.0.195"
serde_yaml = "0.9.30"
